--- a/src/components/weather.css
+++ b/src/components/weather.css
@@ -1,8 +1,9 @@
 .weather {
   background-color: lightsteelblue;
   margin-top: 20px;
-  border: 3px dashed grey;
+  border: 3px groove grey;
   border-radius: 20px;
+  border-width: 7px;
   padding-bottom: 30px;
   width: max-content;
   height: 80vh;
